# agentic-rag

./: agentic.py  app.py  document_processor.py  main.py  pyproject.toml  teste_vector_db.py
